# actix-dapr-rs

./: .gitignore  README.md  docker-compose.yml
dapr-publisher/: Cargo.toml  Dockerfile
dapr-publisher-dotnet/: .editorconfig  .gitignore  Dockerfile  Program.cs  dapr-publisher-dotnet.csproj  dapr-publisher-dotnet.sln
dapr-publisher-dotnet/Properties/: launchSettings.json
dapr-publisher/src/: main.rs
dapr-subscriber/: Cargo.toml  Dockerfile  build.rs
dapr-subscriber/src/: main.rs
