[package]
name = "dapr-subscriber"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
tokio = {version = "0.2.25", features = ["full"] }
actix-web = "3"
tonic = "0.2"
prost = "0.6.1"
dapr = "0.5.0"

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
